Add corrected FlexiblePathCalculatorTest